fix invalid tailwind class order

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
+  "root": true,
   "extends": [
     "plugin:tailwindcss/recommended",
     "next/core-web-vitals",
     "next/typescript"
-  ]
+  ],
+  "parser": "@typescript-eslint/parser"
 }
