--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
     "eslint-plugin-tailwindcss": "^3.17.4",
